# plasma-widget-quickaccess

./: .cproject  .project  CMakeLists.txt  ChangeLog  Messages.sh  README  build.sh  popupdialog.cpp  popupdialog.h  quickaccess.cpp.orig  quickaccessGeneralConfig.ui  quickaccessGeneralConfig.ui.org  quickaccessPreviewConfig.ui  settings.cpp  settings.h
po/: CMakeLists.txt
po/de/: CMakeLists.txt  plasma_applet_quickaccess.po
po/es/: CMakeLists.txt  plasma_applet_quickaccess.po
po/fr/: CMakeLists.txt  plasma_applet_quickaccess.po
po/gl/: CMakeLists.txt  plasma_applet_quickaccess.po
po/nl/: CMakeLists.txt  plasma_applet_quickaccess.po
po/pt_BR/: CMakeLists.txt  plasma_applet_quickaccess.po
po/sv/: CMakeLists.txt  plasma_applet_quickaccess.po
po/tr/: CMakeLists.txt  plasma_applet_quickaccess.po
po/zh_CN/: CMakeLists.txt  plasma_applet_quickaccess.po
src/: CMakeLists.txt  button.cpp  button.h  dirmodel.cpp  dirmodel.h  effects.cpp  effects.h  iconmanager.cpp  iconmanager.h  itemview.cpp  itemview.h  label.cpp  label.h  pluginmodel.cpp  pluginmodel.h  pluginwidget.cpp  pluginwidget.h  popupdialog.cpp  popupdialog.h  quickaccess.cpp  quickaccess.h  resizedialog.cpp  resizedialog.h  settings.cpp  settings.h
tmp/: quickaccess.h.orig
ui/: CMakeLists.txt  quickaccessAppearanceConfig.ui
